objects/Small_Works__c/Small_Works__c.object-meta.xml
<CustomObject>
    <description>28/03/14~removed HSW- from SmallWorksID Name~WB.</description>
    <label>Small Works</label>
    <nameField>
        <displayFormat>SW{000000}</displayFormat>
        <label>Small Works Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Small Works</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>