objects/Small_Works__c/fields/Arrive__c.field-meta.xml
<CustomField>
    <fullName>Arrive__c</fullName>
    <label>Arrive</label>
    <type>DateTime</type>
</CustomField>