objects/Small_Works__c/fields/Comments_to_Sales__c.field-meta.xml
<CustomField>
    <fullName>Comments_to_Sales__c</fullName>
    <label>Comments to Sales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>