objects/Small_Works__c/fields/Copy_Email_for_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Copy_Email_for_Sheet__c</fullName>
    <inlineHelpText>If you put something in this field, it will email a copy of this reactive sheet to that email address. Note that you can use this in views to mass email yourself a set of sheets. Not available to technicians</inlineHelpText>
    <label>Copy Email for Sheet</label>
    <type>Email</type>
</CustomField>