objects/Small_Works__c/fields/Created_ddmmyy__c.field-meta.xml
<CustomField>
    <fullName>Created_ddmmyy__c</fullName>
    <formula>if(day( DATEVALUE(CreatedDate) )&lt;10,&apos;0&apos;&amp;text(day( DATEVALUE(CreatedDate ))),text(day( DATEVALUE(CreatedDate) )))&amp;&apos;-&apos;&amp; 
if(month( DATEVALUE(CreatedDate) )&lt;10,&apos;0&apos;&amp;text(month( DATEVALUE(CreatedDate) )),text(month( DATEVALUE(CreatedDate) )))&amp;&apos;-&apos;&amp; 
text(year( DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created ddmmyy</label>
    <type>Text</type>
</CustomField>