objects/Small_Works__c/fields/Customer_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Name__c</fullName>
    <label>Customer&apos;s Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>