objects/Small_Works__c/fields/DISCIPLINE__c.field-meta.xml
<CustomField>
    <fullName>DISCIPLINE__c</fullName>
    <formula>&quot;Small Works - &quot;&amp; Text(  System_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DISCIPLINE</label>
    <type>Text</type>
</CustomField>