objects/Small_Works__c/fields/Document_Attached__c.field-meta.xml
<CustomField>
    <fullName>Document_Attached__c</fullName>
    <inlineHelpText>Please Enter the Work Completion Note number to confirm that you have taken a photo of the Priory Work Completion Note that you have completed for this Visit, and attached to this small works</inlineHelpText>
    <label>Document Attached</label>
    <length>255</length>
    <type>Text</type>
</CustomField>