objects/Small_Works__c/fields/Email_Confirmation_to__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirmation_to__c</fullName>
    <label>Email Confirmation to:</label>
    <type>Email</type>
</CustomField>