objects/Small_Works__c/fields/Email_for_HQ_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_for_HQ_Notification__c</fullName>
    <description>Sends an email to the HQ contact for this company notifying them of this service.</description>
    <inlineHelpText>Sends an email to the HQ contact for this company notifying them of this service.</inlineHelpText>
    <label>Email for HQ Notification</label>
    <type>Email</type>
</CustomField>