objects/Small_Works__c/fields/Feedback_Comments__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Comments__c</fullName>
    <label>Feedback Comments</label>
    <type>TextArea</type>
</CustomField>