objects/Small_Works__c/fields/Feedback_Smiley__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Smiley__c</fullName>
    <formula>IF(ISPICKVAL(Rating__c , &apos;Dissatisfied&apos;) , IMAGE(&quot;/servlet/servlet.FileDownload?file=015280000000oAG&quot;, &quot;FeadbackNo&quot;,30,30),IF(ISPICKVAL(Rating__c , &apos;Satisfied&apos; ), IMAGE(&quot;/servlet/servlet.FileDownload?file=015280000000oBT&quot;, &quot;FeadbackNo&quot;,30,30),IF(ISPICKVAL(Rating__c ,&apos;Neutral&apos;) , IMAGE(&quot;/servlet/servlet.FileDownload?file=015280000000oAB&quot;, &quot;FeadbackNA&quot;,30,30),&quot;&quot; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedback Smiley</label>
    <type>Text</type>
</CustomField>