objects/Small_Works__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <description>Purchase Order No:</description>
    <inlineHelpText>Small Works Purchase Order</inlineHelpText>
    <label>Purchase Order No:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>