objects/Small_Works__c/fields/Return_Visit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Visit_Reason__c</fullName>
    <label>Return Visit Reason</label>
    <type>TextArea</type>
</CustomField>