objects/Small_Works__c/fields/Sales_Quote_Required__c.field-meta.xml
<CustomField>
    <fullName>Sales_Quote_Required__c</fullName>
    <label>Sales Quote Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>