objects/Small_Works__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Small Works</relationshipLabel>
    <relationshipName>Small_Works</relationshipName>
    <type>Lookup</type>
</CustomField>