objects/Small_Works__c/fields/Site_Contract__c.field-meta.xml
<CustomField>
    <fullName>Site_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Contract</label>
    <referenceTo>SiteContracts__c</referenceTo>
    <relationshipLabel>Small Works</relationshipLabel>
    <relationshipName>Small_Works</relationshipName>
    <type>Lookup</type>
</CustomField>