objects/Small_Works__c/fields/Small_Works_No__c.field-meta.xml
<CustomField>
    <fullName>Small_Works_No__c</fullName>
    <displayFormat>SW-{00000}</displayFormat>
    <label>Small Works No.</label>
    <type>AutoNumber</type>
</CustomField>