objects/Small_Works__c/fields/Submit_this_Small_Works_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Submit_this_Small_Works_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit this Small Works Sheet</label>
    <type>Checkbox</type>
</CustomField>