objects/Small_Works__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>Small Works</relationshipLabel>
    <relationshipName>Small_Works</relationshipName>
    <type>Lookup</type>
</CustomField>