objects/Small_Works__c/fields/Technician_Group__c.field-meta.xml
<CustomField>
    <fullName>Technician_Group__c</fullName>
    <formula>TEXT( Technician__r.Technician_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician Group</label>
    <type>Text</type>
</CustomField>