objects/Small_Works__c/fields/Technician_Id__c.field-meta.xml
<CustomField>
    <fullName>Technician_Id__c</fullName>
    <formula>Technician__r.Engineer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician Id</label>
    <type>Text</type>
</CustomField>