objects/Small_Works__c/fields/Technician_Revisit_email__c.field-meta.xml
<CustomField>
    <fullName>Technician_Revisit_email__c</fullName>
    <defaultValue>&quot;technician.revisits@hentland.com&quot;</defaultValue>
    <description>this should be off the page and is used to facilitate the revisit email to technician.revisit@hentland.com</description>
    <inlineHelpText>this should be off the page and is used to facilitate the revisit email to technician.revisit@hentland.com</inlineHelpText>
    <label>Technician Revisit email</label>
    <type>Email</type>
</CustomField>