objects/Small_Works__c/fields/Technician_s_Comments_to_customer__c.field-meta.xml
<CustomField>
    <fullName>Technician_s_Comments_to_customer__c</fullName>
    <description>Technician&apos;s Comments to customer</description>
    <label>Technician&apos;s Comments to customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>