objects/Small_Works__c/fields/Technician_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Technician_s_Email__c</fullName>
    <formula>Technician__r.Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician&apos;s Email</label>
    <type>Text</type>
</CustomField>