objects/Small_Works__c/fields/Technician_s_Print__c.field-meta.xml
<CustomField>
    <fullName>Technician_s_Print__c</fullName>
    <label>Technician&apos;s Print</label>
    <length>100</length>
    <type>Text</type>
</CustomField>