objects/Small_Works__c/fields/Technician_s_Re_Visit_Email__c.field-meta.xml
<CustomField>
    <fullName>Technician_s_Re_Visit_Email__c</fullName>
    <label>Technician&apos;s Re-Visit Email</label>
    <type>Email</type>
</CustomField>