objects/Small_Works__c/fields/Technician_s_Signature__c.field-meta.xml
<CustomField>
    <fullName>Technician_s_Signature__c</fullName>
    <label>Technician&apos;s Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>