objects/Small_Works__c/fields/This_is_a_Bourne_Leisure_Small_Works__c.field-meta.xml
<CustomField>
    <fullName>This_is_a_Bourne_Leisure_Small_Works__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This is a Bourne Leisure Small Works</label>
    <type>Checkbox</type>
</CustomField>