objects/Small_Works__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Small Works</relationshipLabel>
    <relationshipName>Small_Works</relationshipName>
    <type>Lookup</type>
</CustomField>