objects/Small_Works__c/validationRules/Document_Attached_Field_Ticked.validationRule-meta.xml
<ValidationRule>
    <fullName>Document_Attached_Field_Ticked</fullName>
    <active>true</active>
    <description>If The Parent Fields is Priory Group It has to be Required</description>
    <errorConditionFormula>BEGINS( Site__r.Parent.Name, &apos;Priory Group&apos;) &amp;&amp; 
ISBLANK(Document_Attached__c)</errorConditionFormula>
    <errorDisplayField>Document_Attached__c</errorDisplayField>
    <errorMessage>Please Enter the Document Attached Field for the &apos;Priory Group&apos; Service Sheets</errorMessage>
</ValidationRule>