objects/Small_Works__c/validationRules/Must_depart_after_you_arrive.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_depart_after_you_arrive</fullName>
    <active>true</active>
    <errorConditionFormula>Arrive__c &gt;  Depart__c</errorConditionFormula>
    <errorDisplayField>Arrive__c</errorDisplayField>
    <errorMessage>You cannot depart before you arrive.</errorMessage>
</ValidationRule>