objects/Small_Works__c/validationRules/Restrict_Different_Sites.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Different_Sites</fullName>
    <active>true</active>
    <description>We should throw the error when the sheet is getting saved with the different sites(visit &amp; site)</description>
    <errorConditionFormula>Site__c &lt;&gt; Visit__r.Site__c</errorConditionFormula>
    <errorDisplayField>Site__c</errorDisplayField>
    <errorMessage>Please keep the correct site as in the visit</errorMessage>
</ValidationRule>