objects/Small_Works__c/validationRules/Revisit_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Revisit_Required</fullName>
    <active>true</active>
    <description>If a revisit is required, you must enter a response in the Sales Quote? field - either yes or no.</description>
    <errorConditionFormula>AND(TEXT(  Re_Visit_Required__c )=&quot;Yes&quot;,
 TEXT( Sales_Quote_Required__c )=&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Sales_Quote_Required__c</errorDisplayField>
    <errorMessage>You have stated that a Re-Visit is required, please select Yes or No in the Sales Quote Required field.</errorMessage>
</ValidationRule>