objects/Small_Works__c/listViews/All_S_W.listView-meta.xml
<ListView>
    <fullName>All_S_W</fullName>
    <columns>NAME</columns>
    <columns>System_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All S W</label>
</ListView>